// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The GuJanusAssumableRole construct creates multiple roles in the same stack 1`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [
      "GuStack",
      "GuJanusAssumableRole",
      "GuGetS3ObjectsPolicy",
      "GuJanusAssumableRole",
      "GuParameterStoreReadPolicy",
    ],
    "gu:cdk:version": "TEST",
  },
  "Parameters": {
    "SsmParameterValuesecurityjanususerarnC96584B6F00A464EAD1953AFF4B05118Parameter": {
      "Default": "/security/janus/user-arn",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "ParameterStoreReadTestapp55EBEFA5": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/TEST/test-stack/test-app",
                  ],
                ],
              },
            },
            {
              "Action": [
                "ssm:GetParameters",
                "ssm:GetParameter",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/TEST/test-stack/test-app/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "parameter-store-read-policy",
        "Roles": [
          {
            "Ref": "securityhqdevadvancedRole0BA24B5E",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "ReadS3FileAD380B27": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:GetObject",
              "Effect": "Allow",
              "Resource": "arn:aws:s3:::config-bucket/config",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "ReadS3FileAD380B27",
        "Roles": [
          {
            "Ref": "securityhqdevRoleB8272E08",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "securityhqdevRoleB8272E08": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Ref": "SsmParameterValuesecurityjanususerarnC96584B6F00A464EAD1953AFF4B05118Parameter",
                },
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Path": "/gu/janus/discoverable/",
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:janus:discoverable",
            "Value": "true",
          },
          {
            "Key": "gu:janus:permission",
            "Value": "security-hq-dev",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/cdk",
          },
          {
            "Key": "Stack",
            "Value": "test-stack",
          },
          {
            "Key": "Stage",
            "Value": "TEST",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "securityhqdevadvancedRole0BA24B5E": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Ref": "SsmParameterValuesecurityjanususerarnC96584B6F00A464EAD1953AFF4B05118Parameter",
                },
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Path": "/gu/janus/discoverable/",
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:janus:discoverable",
            "Value": "true",
          },
          {
            "Key": "gu:janus:permission",
            "Value": "security-hq-dev-advanced",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/cdk",
          },
          {
            "Key": "Stack",
            "Value": "test-stack",
          },
          {
            "Key": "Stage",
            "Value": "TEST",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
  },
}
`;

exports[`The GuJanusAssumableRole construct creates role with all Janus tags when all properties are provided 1`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [
      "GuStack",
      "GuJanusAssumableRole",
      "GuGetS3ObjectsPolicy",
    ],
    "gu:cdk:version": "TEST",
  },
  "Parameters": {
    "SsmParameterValuesecurityjanususerarnC96584B6F00A464EAD1953AFF4B05118Parameter": {
      "Default": "/security/janus/user-arn",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "ReadS3FileAD380B27": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:GetObject",
              "Effect": "Allow",
              "Resource": "arn:aws:s3:::config-bucket/config",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "ReadS3FileAD380B27",
        "Roles": [
          {
            "Ref": "securityhqdevRoleB8272E08",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "securityhqdevRoleB8272E08": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Ref": "SsmParameterValuesecurityjanususerarnC96584B6F00A464EAD1953AFF4B05118Parameter",
                },
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Path": "/gu/janus/discoverable/",
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:janus:description",
            "Value": "Access to resources needed for basic day-to-day work on the Security HQ app.",
          },
          {
            "Key": "gu:janus:discoverable",
            "Value": "true",
          },
          {
            "Key": "gu:janus:name",
            "Value": "Security HQ Developer",
          },
          {
            "Key": "gu:janus:permission",
            "Value": "security-hq-dev",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/cdk",
          },
          {
            "Key": "Stack",
            "Value": "test-stack",
          },
          {
            "Key": "Stage",
            "Value": "TEST",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
  },
}
`;

exports[`The GuJanusAssumableRole construct creates role with mandatory Janus tags when only mandatory properties are provided 1`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [
      "GuStack",
      "GuJanusAssumableRole",
      "GuGetS3ObjectsPolicy",
    ],
    "gu:cdk:version": "TEST",
  },
  "Parameters": {
    "SsmParameterValuesecurityjanususerarnC96584B6F00A464EAD1953AFF4B05118Parameter": {
      "Default": "/security/janus/user-arn",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "ReadS3FileAD380B27": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:GetObject",
              "Effect": "Allow",
              "Resource": "arn:aws:s3:::config-bucket/config",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "ReadS3FileAD380B27",
        "Roles": [
          {
            "Ref": "securityhqdevRoleB8272E08",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "securityhqdevRoleB8272E08": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Ref": "SsmParameterValuesecurityjanususerarnC96584B6F00A464EAD1953AFF4B05118Parameter",
                },
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Path": "/gu/janus/discoverable/",
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:janus:discoverable",
            "Value": "true",
          },
          {
            "Key": "gu:janus:permission",
            "Value": "security-hq-dev",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/cdk",
          },
          {
            "Key": "Stack",
            "Value": "test-stack",
          },
          {
            "Key": "Stage",
            "Value": "TEST",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
  },
}
`;
